# dataclaw

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
src/dataclaw/: __init__.py  app.py  config.py  database.py
src/dataclaw/api/: routes.py
src/dataclaw/cli/: main.py
src/dataclaw/domain/: models.py  schemas.py
src/dataclaw/services/: diff.py  execute.py  ingest.py  inspect.py  publish.py
src/dataclaw/strategies/: registry.py
src/dataclaw/web/: views.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: router.ts  style.css
web/src/api/: client.ts
web/src/components/: AppLayout.vue
web/src/views/: DiffPage.vue  HomePage.vue  InspectPage.vue  PublishPage.vue  RunPage.vue
